/*
 * Copyright 2021 Matrix Origin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package catalog;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all)                = false;
option (gogoproto.protosizer_all)           = true;
option (gogoproto.goproto_enum_prefix_all)  = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all)      = false;
option (gogoproto.goproto_sizecache_all)    = false;

message BlockInfo {
    option (gogoproto.typedecl) = false;
    bytes BlockID               = 1 [
        (gogoproto.customtype) =
            "github.com/matrixorigin/matrixone/pkg/container/types.Blockid",
        (gogoproto.nullable) = false
    ];
    bool EntryState = 2;
    bool Sorted     = 3;
    bytes MetaLoc   = 4 [
        (gogoproto.customtype) = "ObjectLocation",
        (gogoproto.nullable)   = false
    ];
    bytes DeltaLoc = 5 [
        (gogoproto.customtype) = "ObjectLocation",
        (gogoproto.nullable)   = false
    ];
    bytes SegmentID = 6 [
        (gogoproto.customtype) =
            "github.com/matrixorigin/matrixone/pkg/container/types.Uuid",
        (gogoproto.nullable) = false
    ];
    bytes CommitTs = 7 [
        (gogoproto.customtype) =
            "github.com/matrixorigin/matrixone/pkg/container/types.TS",
        (gogoproto.nullable) = false
    ];
}
